# esirem-itc313

./: .gitignore  LISEZMOI.md  README.md
TD/: TD1.md  TD2.md
TD/2019-2020/: TD1.md  TD2.md
TD/2020-2021/: TD1.md  TD2.md
TD/TD1/: Makefile.polygone  Makefile.segment  point.cpp  point_main.cpp  polygone.cpp  segment_main.cpp
TD/TD2/: Makefile  category.cpp  category.h  todo.cpp  todo.d  todo.h  todolist-test  todolist-test.d  todolist.cpp  todolist.h  todolist_main.cpp
TD/code/: Makefile.point  polygone.cpp  polygone.h  polygone_main.cpp  segment.h
TP/: Makefile  README.md  TP1.md  TP2.md  TP3.md  github.md
TP/2019-2020/: README.md  TP1.md  TP2.md
TP/2020-2021/: README.md  TP1.md  TP2.md  TP3.md
TP/2021-2022/: README.md  TP1.md  TP2.md  TP3.md  TP4.md  TP5.md  TP6.md
TP/2022-2023/: README.md  TP1.md  TP3.md
TP/2023-2024/: README.md  TP4.md
TP/2024-2025/: README.md  TP6.md
TP/latest/: README.md  TP2.md  TP4.md
exams/: cc2021-2022.md  cc2022-2023.md  cc2023-2024.md  exam2018-2019-ex1.cpp  exam2018-2019-ex2.cpp  exam2018-2019-ex3.cpp  exam2018-2019.md  exam2021-2022.md  exam2022-2023.md  exam2023-2024.md  rattrapage2018-2019-ex1.cpp  rattrapage2018-2019-ex2.cpp  rattrapage2018-2019.md
lectures/: README.md
samples/lesson02/: 00-hello-world-with-std.cpp  00-hello-world.cpp
samples/lesson03/: date.cpp  foo1.h  functions.cpp
samples/lesson04/: date.cpp  date_main0.cpp  date_main2.cpp
samples/lesson05/: Makefile.library  address-of-vs-reference.cpp  array-ref.cpp  basic-array.cpp  book-test.cpp  (+17 more)
utils/: CMakeLists.txt  Makefile  README.md
(+601 files in other folders)
